Bug #72902 (#2324)
Add --add-opens JVM options to fix Ignite's binary serialization errors