@@ -427,6 +427,9 @@
             --add-opens=java.base/java.time=ALL-UNNAMED
             --add-opens=java.base/java.text=ALL-UNNAMED
             --add-opens=java.management/sun.management=ALL-UNNAMED
+            --add-opens=java.desktop/java.awt=ALL-UNNAMED
+            --add-opens=java.desktop/java.awt.geom=ALL-UNNAMED
+            --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
           </jvmArguments>
           <additionalClasspathElements>
             <element>${basedir}/../core/target/classes</element>
